# scrinium

./: .gitignore  LICENSE  README.md  docker-compose.yml
contracts/: README.md
document-service/: README.md  pom.xml
gateway-service/: pom.xml
processing-service/: .env.example  Cargo.toml  README.md
processing-service/migrations/: 202606200001_create_processing_jobs.sql  202606210001_create_extracted_pages.sql  202606210002_create_document_metadata.sql  202606270001_create_document_thumbnails.sql
processing-service/src/: adapter.rs  application.rs  config.rs  contract.rs  domain.rs  lib.rs  main.rs
processing-service/src/adapter/inbound/http/: mod.rs
processing-service/src/adapter/inbound/kafka/: consumer.rs  contract.rs  mod.rs
processing-service/src/adapter/outbound/: mod.rs  redis_progress_reporter.rs
processing-service/src/adapter/outbound/messaging/: kafka_event_publisher.rs  mod.rs
processing-service/src/adapter/outbound/persistence/: mod.rs  sqlx_metadata_repository.rs  sqlx_processing_job_repository.rs  sqlx_thumbnail_repository.rs
processing-service/src/adapter/outbound/processing/: digital_pdf_processor.rs  image_processor.rs  metadata.rs  mod.rs  pdf_detector.rs  scanned_pdf_processor.rs  tesseract_ocr.rs  thumbnail.rs
processing-service/src/adapter/outbound/processing/preprocessing/: contrast.rs  denoise.rs  deskew.rs  dpi_normalization.rs  grayscale.rs  mod.rs  pipeline.rs
processing-service/src/adapter/outbound/storage/: mod.rs  s3_document_storage.rs
processing-service/src/application/: mod.rs  process_document.rs
processing-service/src/domain/model/: document_metadata.rs  extracted_document_metadata.rs  mod.rs  processing_completed_event.rs  processing_job.rs  processing_result.rs  thumbnail.rs
processing-service/src/domain/port/: document_processor.rs  document_storage.rs  event_publisher.rs  metadata_extractor.rs  metadata_repository.rs  mod.rs  ocr_engine.rs  preprocessing_step.rs  processing_job_repository.rs  progress_reporter.rs  thumbnail_generator.rs  thumbnail_repository.rs
search-service/: .env.example  README.md  pyproject.toml  requirements.txt
search-service/app/: config.py  consumer.py  db.py  indexer.py  main.py  router.py
(+99 files in other folders)
