[package]
name = "processing-service"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.39", features = ["cmake-build", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"