[package]
name = "processing-service"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.39", features = ["cmake-build", "tokio"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
pdf-extract = "0.7"
lopdf = "0.36"
pdfium-render = { version = "0.8", features = ["image", "sync", "thread_safe"] }
image = "0.25"
imageproc = "0.25"
